--- a/Project/Project/Project.csproj
+++ b/Project/Project/Project.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="catalog.cs">
+    <Compile Include="CreditCards.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="catalog.Designer.cs">
-      <DependentUpon>catalog.cs</DependentUpon>
+    <Compile Include="CreditCards.Designer.cs">
+      <DependentUpon>CreditCards.cs</DependentUpon>
     </Compile>
     <Compile Include="logIn.cs">
       <SubType>Form</SubType>
@@ -63,6 +63,12 @@
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifyProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyProfile.Designer.cs">
+      <DependentUpon>ModifyProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="profile.cs">
       <SubType>Form</SubType>
@@ -83,14 +89,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ZaraDBDataSet.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="catalog.resx">
-      <DependentUpon>catalog.cs</DependentUpon>
+    <EmbeddedResource Include="CreditCards.resx">
+      <DependentUpon>CreditCards.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="logIn.resx">
       <DependentUpon>logIn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyProfile.resx">
+      <DependentUpon>ModifyProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="profile.resx">
       <DependentUpon>profile.cs</DependentUpon>
